--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
             </p>
             <div class="btn-container">
               <a href="#hire-me" class="btn ">Hire Me</a>
-              <a href="img/Resume.png" class="btn " download>Get CV</a>
+              <a href="Resume.png" class="btn " download>Get CV</a>
             </div>
           </div>
         </div>
         <div class="col-md-6 image-section">
-          <img src="img/bg-removebg-preview.png" alt="Profile Image">
+          <img src="bg-removebg-preview.png" alt="Profile Image">
         </div>
       </div>
     </div>
@@ -61,7 +61,7 @@
       <div class="container">
         <div class="row content">
           <div class="col-md-6">
-            <img src="img/about1.avif" alt="About Image">
+            <img src="about1.avif" alt="About Image">
           </div>
           <div class="col-md-6 text-content">
             <h2>About Me</h2>
@@ -120,7 +120,7 @@
           <!-- Graphic Design Project -->
           <div class="col-md-4">
             <div class="card">
-              <img src="img/graphic.jpg" class="card-img-top" alt="Graphic Design Project">
+              <img src="graphic.jpg" class="card-img-top" alt="Graphic Design Project">
               <div class="card-body">
                 <h5 class="card-title">Graphic Design Project</h5>
                 <p class="card-text">This project showcases creative graphic design work, including branding, poster design, and more. It demonstrates my ability to create visually appealing designs that effectively communicate messages.</p>
@@ -130,7 +130,7 @@
           <!-- Web Design Project -->
           <div class="col-md-4">
             <div class="card">
-              <img src="img/—Pngtree—web development illustration modern_4461019.png" class="card-img-top" alt="Web Design Project">
+              <img src="—Pngtree—web development illustration modern_4461019.png" class="card-img-top" alt="Web Design Project">
               <div class="card-body">
                 <h5 class="card-title">Web Design Project</h5>
                 <p class="card-text">A web design project that features modern and responsive web layouts. It highlights my skills in creating user-friendly and visually engaging websites that are optimized for various devices.</p>
@@ -140,7 +140,7 @@
           <!-- Web Development Project -->
           <div class="col-md-4">
             <div class="card">
-              <img src="img/web.jpg" class="card-img-top" alt="Web Development Project">
+              <img src="web.jpg" class="card-img-top" alt="Web Development Project">
               <div class="card-body">
                 <h5 class="card-title">Web Development Project</h5>
                 <p class="card-text">An example of a web development project, showcasing my ability to build functional and interactive web applications. This project demonstrates proficiency in front-end and back-end development technologies.</p>
@@ -155,7 +155,7 @@
       <div class="container">
         <h2>Download My Resume</h2>
         <div class="resume-button">
-          <a href="img/Resume.png" download>
+          <a href="Resume.png" download>
             <span class="iconify resume-icon" data-icon="mdi:file-pdf"></span> Download Resume
           </a>
         </div>
@@ -195,7 +195,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="blog-post">
-                    <img src="img/blog1.avif" alt="How to Start with Web Development">
+                    <img src="blog1.avif" alt="How to Start with Web Development">
                     <h3>How to Start with Web Development</h3>
                     <p>Web development is a fascinating field that blends creativity and technical skills. Learn how to get started with the basics of HTML, CSS, and JavaScript...</p>
                     <a href="blog1.html" class="btn">Read More</a>
@@ -203,7 +203,7 @@
             </div>
             <div class="col-md-4">
                 <div class="blog-post">
-                    <img src="img/blog2.jpg" alt="Top Graphic Design Trends in 2024">
+                    <img src="blog2.jpg" alt="Top Graphic Design Trends in 2024">
                     <h3>Top Graphic Design Trends in 2024</h3>
                     <p>Discover the latest trends in graphic design for 2024, including minimalism, bold colors, and innovative typography. Stay ahead of the curve...</p>
                     <a href="blog2.html" class="btn">Read More</a>
@@ -211,7 +211,7 @@
             </div>
             <div class="col-md-4">
                 <div class="blog-post">
-                    <img src="img/UI-UX-Vector-Illustration.jpg" alt="Understanding UI/UX Design">
+                    <img src="UI-UX-Vector-Illustration.jpg" alt="Understanding UI/UX Design">
                     <h3>Understanding UI/UX Design</h3>
                     <p>UI/UX design is crucial for creating user-friendly and visually appealing applications. Learn about the principles of UI/UX and how to apply them to your projects...</p>
                     <a href="blog3.html" class="btn">Read More</a>
@@ -219,7 +219,7 @@
             </div>
             <div class="col-md-4">
                 <div class="blog-post">
-                    <img src="img/js.avif" alt="Beginner's Guide to JavaScript">
+                    <img src="js.avif" alt="Beginner's Guide to JavaScript">
                     <h3>Beginner's Guide to JavaScript</h3>
                     <p>JavaScript is a powerful language for web development. This guide covers the basics, from variables and functions to events and DOM manipulation...</p>
                     <a href="blog4.html" class="btn">Read More</a>
@@ -227,7 +227,7 @@
             </div>
             <div class="col-md-4">
                 <div class="blog-post">
-                    <img src="img/css.jpg" alt="CSS Grid vs. Flexbox">
+                    <img src="css.jpg" alt="CSS Grid vs. Flexbox">
                     <h3>CSS Grid vs. Flexbox</h3>
                     <p>Learn the differences between CSS Grid and Flexbox, two powerful layout modules in CSS. Understand when to use each for your web design projects...</p>
                     <a href="blog5.html" class="btn">Read More</a>
@@ -235,7 +235,7 @@
             </div>
             <div class="col-md-4">
                 <div class="blog-post">
-                    <img src="img/seo.jpg" alt="Effective SEO Strategies">
+                    <img src="seo.jpg" alt="Effective SEO Strategies">
                     <h3>Effective SEO Strategies</h3>
                     <p>SEO is vital for increasing website visibility. Discover effective strategies to improve your site's ranking on search engines and attract more visitors...</p>
                     <a href="blog6.html" class="btn">Read More</a>
