--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="img/logo-removebg-preview.png" alt="" width="90">
+           <img src="img-removebg-preview.png" alt="" width="100">
           </a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
