--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <div class="card-body">
                 <h5 class="card-title">Web Development Project</h5>
                 <p class="card-text">An example of a web development project, showcasing my ability to build functional and interactive web applications. This project demonstrates proficiency in front-end and back-end development technologies.</p>
-                <a href="https://www.canva.com/design/DAFzsLfzV3g/ntK1LsNA_0DH4mQ2dS7ZXA/edit?utm_content=DAFzsLfzV3g&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="button-link">
+                <a href="" class="button-link">
                   <button class="styled-btn">
                     <span>View Project</span>
                   </button>
